--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <li><a href="./index.html" style="font-weight: bold;">Trang chủ</a></li>
                 <li><a href="./thethao.html">Đạn dược</a></li>
                 <li><a href="./congnghe.html">Súng máy</a></li>
-                <li><a href="./giaoduc.html">Nade</a></li>
+                <li><a href="./nade.html">Nade</a></li>
 
             </ul>
         </nav>
